--- a/src/components/EGContext/EGContext.less
+++ b/src/components/EGContext/EGContext.less
@@ -1,11 +1,5 @@
-.EGContext {
-  transition: all 0.3s;
+.contextBox {
   display: inline-block;
   position: absolute;
-  top: 100px;
-}
-
-.EGContext:hover {
-  transform: scale(1.2);
   cursor: move;
 }
